[package]
name = "tctrl"
version = "0.4.1"
edition = "2021"
description = "Control your TMUX sessions in style"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
home = "0.5.5"
rlua = "0.19.7"
skim = "0.10.4"
tmux_interface = { version = "0.3.1", features = ["tmux_3_3a"] }
